<resources>
    <string name="app_name">CMPT-Cobalt</string>
    <string name="title_activity_main">List of Restaurants</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title_activity_inspection">Inspections</string>
    <string name="txt_select_a_restaurant">Select a restaurant to see inspections:</string>

    <!--Inspection Details Screen-->
    <string name="tracking_number">Tracking Number:</string>
    <string name="inspection_date">Inspection Date:</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="num_critical"># Critical Issues:</string>
    <string name="num_non_critical"># Non Critical Issues:</string>
    <string name="hazard_rating">Hazard Rating</string>
    <string name="violations">Violations:</string>

    <string name="name_resActivity">Name</string>
    <string name="address">Address</string>
    <string name="semicolon">:</string>
    <string name="latitude">Latitude</string>
    <string name="longitude_resActivity">Longitude</string>
    <string name="latitude_fix">Lat:</string>
    <string name="longitude_fix">Long:</string>
    <string name="main_display_format">Display Format:\n
        Restaurant Name\n
        Critical + Non-Critical, Hazard Level, Most Recent Inspection date</string>
    <string name="restaurant_display_format">Display Format:\n
        Critical, Non-Critical, Relative date, Type, Hazard level, icon</string>

    <string name="na">N/A</string>
    <string name="show_violations">Show Critical Violations</string>
    <string name="title_activity_download">Pre-loader</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Grant location access</string>
    <string name="text_location_permission">Requires location access</string>
    <string name="ok">Grant</string>
    <string name="txt_downloadAsk">The local database is less than 20 hours old, compared to the online database. Would you still like to update and fetch the new database?\nThis may take a moment depending on your internet connection.</string>

    <string name="search_hint">Enter your search here</string>
    <string name="search">Cobalt Search</string>
    <string name="clear_filter">Clear</string>
    <string name="hazard_level">Show Hazard Level:</string>
    <string name="critical_violation_count">Show Critical Violations Count</string>
    <string name="apply">Apply</string>
    <string name="dialog_text">Latest update already installed!</string>
    <string name="greeting_check_update">\n\n\n\nNothing to show!
                    \n\nNo updates to favourite restaurants found.\n\n</string>
    <string name="favourite_only">Show Favourite Only</string>
    <string name="greeting_main_activity">\n\n\n\nWelcome to the Restaurant Inspector!\n\nNothing to show right now!\n\n</string>
    <string-array name="hazard_level_array">
        <item>All</item>
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>

    <string-array name="comparator">
        <item>All</item>
        <item>Greater or Equal</item>
        <item>Lesser or Equal</item>
    </string-array>
    <string name="title_activity_check_update">Check Update Activity</string>
    <string name="newly_inspected_favourite_restaurants_click_the_check_once_done">Following are the newly inspected favourite restaurants: (Click OK once done)</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="fix_greeting_search">Enter your search preferences below:</string>
    <string name="data_hint_search">Data</string>

</resources>
