<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.RestaurantActivity"
    tools:showIn="@layout/activity_restaurant">

    <ListView
        android:id="@+id/restaurant_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_fix_text" />

    <TextView
        android:id="@+id/name_resActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/name_resActivity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address_resActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_resActivity"
        app:layout_constraintStart_toEndOf="@+id/fix_txt1"
        app:layout_constraintTop_toTopOf="@+id/name_resActivity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fix_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semicolon"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/name_resActivity"
        app:layout_constraintStart_toEndOf="@+id/name_resActivity"
        app:layout_constraintTop_toTopOf="@+id/name_resActivity" />

    <TextView
        android:id="@+id/fix_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/latitude_fix"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/name_resActivity"
        app:layout_constraintTop_toBottomOf="@+id/name_resActivity" />

    <TextView
        android:id="@+id/latLng_resActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fix_txt2"
        app:layout_constraintStart_toEndOf="@+id/fix_txt2"
        app:layout_constraintTop_toTopOf="@+id/fix_txt2" />

    <TextView
        android:id="@+id/restaurant_fix_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/restaurant_display_format"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/fix_txt2"
        app:layout_constraintTop_toBottomOf="@+id/fix_txt2" />

</androidx.constraintlayout.widget.ConstraintLayout>