<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info_item_numNonCritical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/info_item_numCritical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/info_textView10"
            android:text="@string/na" />

        <ImageView
            android:id="@+id/info_item_restaurantLogo"
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@android:drawable/star_big_off" />

        <TextView
            android:id="@+id/info_item_restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/info_item_restaurantLogo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info_item_restaurantLogo"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/info_item_restaurantLogo"
            android:text="@string/num_critical" />

        <TextView
            android:id="@+id/info_textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/info_textView9"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/info_item_restaurantLogo"
            android:text="@string/num_non_critical" />

        <ImageView
            android:id="@+id/info_item_hazardImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            app:srcCompat="@android:drawable/presence_online" />

        <TextView
            android:id="@+id/info_item_numCritical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info_textView9"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/info_textView9"
            android:text="@string/na" />

        <TextView
            android:id="@+id/info_item_lastInspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info_item_numCritical"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="2dp"
            android:text="@string/na" />
    </RelativeLayout>
</RelativeLayout>
